✨ (feat&fix): final self-host config

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,7 +3,7 @@ tasks:
   api-run:
     desc: Run the API Containers
     cmds:
-      - cd api && docker-compose up -d
+      - cd api && docker compose up -d
 
   build-cli:
     desc: Build CLI
